--- a/eks.yaml
+++ b/eks.yaml
@@ -7,7 +7,7 @@ metadata:
 
 managedNodeGroups:
   - name: roboshop
-    instanceType: ["m5.large","c3.large","c4.large","c5.large"]
+    instanceTypes: ["m5.large", "c3.large", "c4.large", "c5.large"]
     minSize: 2
     desiredCapacity: 3
     spot: true
